2008-04-16  Michael Meeks  <michael.meeks@novell.com>

	* gdesktopappinfo.c (g_desktop_app_info_new_from_filename): 
	tolerate an empty TryExec= line without failing; nautilus used
	to create launchers with these in previous versions. Fixes #528433

2008-04-09  Padraig O'Briain  <padraig.obriain@sun.com>

	* gdesktopappinfo.c: In g_app_info_create_from_commandline set comment
	after name. Fixes #527132.

2008-04-08  Tomas Bzatek  <tbzatek@redhat.com>

	* gfile.c: (g_file_replace):
	Doc update

2008-04-07  Matthias Clasen  <mclasen@redhat.com>

	Bug 526796 – Wrong order of arguments in g_file_copy's fallback

	* gfile.c (file_copy_fallback): Fix the argument order. Patch
	by Christian Kellner.

2008-04-04  Sebastien Bacher  <seb128@ubuntu.com>

	* gunixmounts.c: (g_unix_mount_guess_should_display):
	Don't list the user directory as a mount, fix potential issue
	when other users have a similar naming and don't special case the
	gvfs mounts there since that's not required (#525866)

2008-03-31  Alexander Larsson  <alexl@redhat.com>

	* glocalfile.c (get_parent):
	Don't leak parent.
	
2008-03-31  A. Walton  <awalton@svn.gnome.org>

	* gfile.c (g_file_query_file_type):
	Always return a GFileType enum value (#520715).

2008-03-31  Alexander Larsson  <alexl@redhat.com>

        * glocalfileenumerator.c:
	Read readdir() info in chunks (of 1000) and sort
	the chunks by inode before stat:ing.
	This is a 20% performance increase in testing
	gvfs-ls on /usr/bin with cold cache.

2008-03-31  Alexander Larsson  <alexl@redhat.com>

        * gmemoryoutputstream.c:
	Clarify docs for g_memory_output_stream_get_size.
	Add g_memory_output_stream_get_data_size.

2008-03-30  Matthias Clasen  <mclasen@redhat.com>

	* gio.symbols:
	* gfile.c:
	* gfile.h: Add g_file_query_file_type convenience function
	to query the type of a file.  (#520715, Mikkel Kamstrup Erlandsen)

2008-03-30  Matthias Clasen  <mclasen@redhat.com>

	* gfileenumerator.c: