@@ -684,12 +684,10 @@ xdg_mime_mime_type_equal (const char *mime_a,
 }
 
 int
-xdg_mime_media_type_equal (const char *mime_a,
-			   const char *mime_b)
+_xdg_mime_media_type_equal (const char *mime_a,
+			    const char *mime_b)
 {
   char *sep;
-
-  xdg_mime_init ();
 
   sep = strchr (mime_a, '/');
   
@@ -697,6 +695,15 @@ xdg_mime_media_type_equal (const char *mime_a,
     return 1;
 
   return 0;
+}
+
+int
+xdg_mime_media_type_equal (const char *mime_a,
+			   const char *mime_b)
+{
+  xdg_mime_init ();
+
+  return _xdg_mime_media_type_equal (mime_a, mime_b);
 }
 
 #if 1
